feat: Start implementation of header, update personal info

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -32,3 +32,13 @@ $fa-font-path: $pf-global--font-path + "/webfonts";
   max-height: 35rem;
   object-fit: cover;
 }
+
+.pf-c-avatar--main {
+  width: 100%;
+  height: 100%;
+}
+
+.pf-x-person__header {
+  max-width: 1024px;
+  margin: 3rem auto;
+}
