--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,18 +24,22 @@
   <main class="pf-c-page__main" tabindex="-1" id="main">
     <div class="pf-l-grid pf-m-gutter pf-u-p-xl pf-x-person__header">
       <div class="pf-l-grid__item pf-m-5-col pf-u-display-flex pf-u-flex-direction-column pf-u-align-items-center pf-u-justify-content-center">
-        <h1>{{ .Site.Data.person.name }}</h1>
+        <h1 class="pf-u-font-size-xl pf-u-font-weight-bold pf-u-mb-xs">{{ .Site.Data.person.name }}</h1>
         <p>{{ .Site.Data.person.description }}</p>
       </div>
 
       <figure class="pf-l-grid__item pf-m-2-col pf-u-display-flex pf-u-flex-direction-column pf-u-align-items-center pf-u-justify-content-center">
+        <figcaption class="pf-x-c-avatar__figcaption">
+          <div class="pf-c-chip">
+            <span class="pf-c-chip__text">{{ .Site.Data.person.pronouns }}</span>
+          </div> 
+        </figcaption>
+
         <img
           src="{{ .Site.Data.person.img }}"
           alt="Profile picture of {{ .Site.Data.person.name }}"
           class="pf-c-avatar pf-m-xl pf-c-avatar--main"
         />
-
-        <figcaption>{{ .Site.Data.person.pronouns }}</figcaption>
       </figure>
 
       <div class="pf-l-grid__item pf-m-5-col pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
