feat: Add styling for CV link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,9 +3,10 @@
     <div class="pf-c-page__header-tools">
       <div class="pf-c-page__header-tools-group">
         <div class="pf-c-page__header-tools-item">
-          <a href="{{ .Site.Data.person.cv }}" target="_blank" rel="noopener"
-            >CV</a
-          >
+          <a aria-label="Help" href="{{ .Site.Data.person.cv }}" target="_blank" rel="noopener" class="pf-c-button pf-m-plain">
+            <span class="pf-c-button__icon pf-m-start">
+            <i class="fas fa-book" aria-hidden="true"></i>
+          </span>CV</a>
         </div>
 
         <div class="pf-c-page__header-tools-item">
