--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,7 +23,7 @@
 
 {{ define "main" }}
   <main class="pf-c-page__main" tabindex="-1" id="main">
-    <div class="pf-l-grid pf-m-gutter pf-u-p-xl pf-x-person__header">
+    <div class="pf-l-grid pf-m-gutter pf-u-p-xl pf-u-pb-md pf-x-person__header">
       <div class="pf-l-grid__item pf-m-5-col pf-u-display-flex pf-u-flex-direction-column pf-u-align-items-center pf-u-justify-content-center">
         <h1 class="pf-u-font-size-xl pf-u-font-weight-bold pf-u-mb-xs">{{ .Site.Data.person.name }}</h1>
         <p>{{ .Site.Data.person.description }}</p>
