--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -1,24 +1,36 @@
-<div class="pf-c-card" id="{{ .ID }}">
-  <div class="pf-c-card__body">
-    <div class="lastcommit">
-      <div>
-        <span>Latest GitHub commit by</span>
+<div class="pf-c-card pf-c-card--overlay" id="{{ .ID }}">
+  <div class="pf-c-card__body pf-u-p-0 pf-u-display-flex">
+    <img src="/img/octocat.svg" class="pf-u-p-md pf-u-pr-sm pf-x-octocat">
+    <div class="lastcommit pf-u-flex-grow-1">
+      <div class="pf-c-code-block pf-c-code-block--transparent pf-u-p-md pf-u-pl-sm">
+        <div class="pf-c-code-block__header">
+          <div class="pf-c-code-block__actions pf-c-code-block__actions--info">
+<div class="pf-c-code-block__actions-item pf-u-py-sm pf-u-px-md">
+              <span>
+          <i class="fas fa-info-circle" aria-hidden="true"></i>
+          Last GitHub commit by</span>
         <a class="lastcommit__user__url" target="_blank">
-          <img id="lastcommit__user__url__img">
+          <img id="lastcommit__user__url__img" />
         </a>
-        <span> (on</span>
-        <a class="lastcommit__commit__url" target="_blank">
-          <span class="lastcommit__commit__time"></span>
-        </a>
-        <span>in</span>
-        <a class="lastcommit__repo__url" target="_blank">
-          <code class="lastcommit__repo__name"></code></a
-        >):
-      </div>
+            </div>
 
-      <a class="lastcommit__commit__url" target="_blank">
-        <code class="lastcommit__commit__message"></code>
-      </a>
+            <div class="pf-c-code-block__actions-item pf-u-py-sm pf-u-px-md">
+              <a clas="lastcommit__repo__url" target="_blank">
+                <i class="fas fa-code-branch" aria-hidden="true"></i>
+                <span class="lastcommit__repo__name"></span> (<span
+                  class="lastcommit__commit__time"
+                ></span
+                >)
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="pf-c-code-block__content">
+          <pre
+            class="pf-c-code-block__pre"
+          ><code class="pf-c-code-block__code lastcommit__commit__message"></code></pre>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -48,8 +60,10 @@ document
     c.href = lastCommit.lastCommitURL;
   });
 
+const diff = Math.ceil((new Date() - new Date(lastCommit.lastCommitTime))/36e5);
+
 document.querySelector("#{{ .ID }} .lastcommit__commit__time").innerText =
-  new Date(lastCommit.lastCommitTime).toLocaleString();
+  diff >= 0 ? diff + " hours ago" : "just now";
 
 document.querySelector("#{{ .ID }} .lastcommit__commit__message").innerText =
   lastCommit.lastCommitMessage;
