--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -85,3 +85,22 @@ $fa-font-path: $pf-global--font-path + "/webfonts";
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.pf-c-card__header-main__img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.pf-c-card__header-main--fluid {
+  width: 100%;
+}
+
+.pf-x-commitwrapper {
+  z-index: 10;
+}
+
+.pf-l-grid--max-width {
+  max-width: 1280px;
+  margin: 0 auto;
+}
