feat: Align navbar with articles and tweets container

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "header" }}
-  <header class="pf-c-page__header">
-  <div class="pf-c-page__header-tools">
+  <header class="pf-c-page__header pf-c-page__header--max-width">
+  <div class="pf-c-page__header-tools pf-c-page__header-tools--max-width">
     <div class="pf-c-page__header-tools-group">
       <div class="pf-c-page__header-tools-item">
         <a
