--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -101,6 +101,22 @@ $fa-font-path: $pf-global--font-path + "/webfonts";
 }
 
 .pf-l-grid--max-width {
-  max-width: 1280px;
+  width: 1128px;
+  max-width: 100%;
   margin: 0 auto;
+}
+
+.pf-c-page__header--max-width {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pf-c-page__header-tools--max-width {
+  margin: 0 !important;
+  width: 100%;
+  max-width: 1128px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
