--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "header" }}
-  <header class="pf-c-page__header pf-c-page__header--max-width">
+<header class="pf-c-page__header pf-c-page__header--max-width pf-x-u-blur pf-c-page__header--overlay pf-u-box-shadow-sm-bottom">
   <div class="pf-c-page__header-tools pf-c-page__header-tools--max-width">
     <div class="pf-c-page__header-tools-group">
       <div class="pf-c-page__header-tools-item">
@@ -33,7 +33,7 @@
 {{ end }}
 
 {{ define "main" }}
-  <main class="pf-c-page__main pf-c-page__main--blur" tabindex="-1" id="main">
+  <main class="pf-c-page__main pf-c-page__main--with-overlay pf-x-u-blur" tabindex="-1" id="main">
     <div class="pf-l-grid pf-m-gutter pf-u-p-xl pf-u-pb-md pf-x-person__header">
       <div class="pf-l-grid__item pf-m-5-col pf-u-display-flex pf-u-flex-direction-column pf-u-align-items-center pf-u-justify-content-center">
         <h1 class="pf-u-font-size-xl pf-u-font-weight-bold pf-u-mb-xs">{{ .Site.Data.person.name }}</h1>
