--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -1,7 +1,7 @@
 <div class="pf-c-card pf-c-card--overlay" id="{{ .ID }}">
   <div class="pf-c-card__body pf-u-p-0 pf-u-display-flex">
     <img src="/img/octocat.svg" class="pf-u-p-md pf-u-pr-sm pf-x-octocat">
-    <div class="lastcommit pf-u-flex-grow-1">
+    <div class="lastcommit pf-u-flex-grow-1 pf-u-w-100">
       <div class="pf-c-code-block pf-c-code-block--transparent pf-u-p-md pf-u-pl-sm">
         <div class="pf-c-code-block__header">
           <div class="pf-c-code-block__actions pf-c-code-block__actions--info">
@@ -15,7 +15,7 @@
             </div>
 
             <div class="pf-c-code-block__actions-item pf-u-py-sm pf-u-px-md">
-              <a clas="lastcommit__repo__url" target="_blank">
+              <a class="lastcommit__repo__url" target="_blank">
                 <i class="fas fa-code-branch" aria-hidden="true"></i>
                 <span class="lastcommit__repo__name"></span> (<span
                   class="lastcommit__commit__time"
@@ -27,7 +27,7 @@
         </div>
         <div class="pf-c-code-block__content">
           <pre
-            class="pf-c-code-block__pre"
+            class="pf-c-code-block__pre pf-x-u-nowrap"
           ><code class="pf-c-code-block__code lastcommit__commit__message"></code></pre>
         </div>
       </div>
