--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -1,6 +1,6 @@
 <div class="pf-c-card" id="{{ .ID }}">
   <div
-    class="pf-c-card__title pf-l-flex pf-m-justify-content-flex-end pf-m-align-items-center"
+    class="pf-c-card__title pf-l-flex pf-m-justify-content-flex-end pf-m-align-items-center pf-u-py-xl"
   >
     <a
       target="_blank"
@@ -16,6 +16,15 @@
     <ul
       class="twitterfeed__tweets pf-l-flex pf-m-column pf-m-space-items-sm"
     ></ul>
+
+    <a
+      target="_blank"
+      class="twitterfeed__user__url pf-c-button pf-m-link pf-u-mt-lg"
+    >
+      <span class="pf-c-button__icon pf-m-start">
+        <i class="fas fa-arrow-right" aria-hidden="true"></i> </span
+      >All tweets</a
+    >
   </div>
 </div>
 
@@ -29,8 +38,9 @@
   ).json();
 
   // User
-  document.querySelector("#{{ .ID }} .twitterfeed__user__url").href =
-    twitterFeed.userURL;
+  document.querySelectorAll("#{{ .ID }} .twitterfeed__user__url").forEach(el => {
+    el.href = twitterFeed.userURL;
+  })
 
   // Tweets
   twitterFeed.tweets.map((tweet) => {
