--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -1,7 +1,7 @@
 <div class="pf-c-card pf-c-card--overlay" id="{{ .ID }}">
   <div class="pf-c-card__body pf-u-p-0 pf-u-display-flex">
     <img src="/img/octocat.svg" class="pf-u-p-md pf-u-pr-sm pf-x-octocat">
-    <div class="lastcommit pf-u-flex-grow-1 pf-u-w-100">
+    <div class="lastcommit">
       <div class="pf-c-code-block pf-c-code-block--transparent pf-u-p-md pf-u-pl-sm">
         <div class="pf-c-code-block__header">
           <div class="pf-c-code-block__actions pf-c-code-block__actions--info">
