--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
-  <main class="pf-c-page__main" tabindex="-1" id="main">
+  <main class="pf-c-page__main pf-c-page__main--with-overlay pf-x-u-blur" tabindex="-1" id="main">
     {{ .Content }}
 
 
-    <section class="pf-c-page__main-section pf-m-fill">
+    <section class="pf-c-page__main-section pf-m-fill pf-x-u-transparent pf-c-page__main-section--max-width pf-u-px-0">
       <div class="pf-c-page__main">
         <ul>
           {{ range .Pages }}
