--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-  <main class="pf-c-page__main" tabindex="-1" id="main">
-    <section class="pf-c-page__main-section pf-m-fill">
+  <main class="pf-c-page__main pf-c-page__main--with-overlay pf-x-u-blur pf-x-u-transparent" tabindex="-1" id="main">
+    <section class="pf-c-page__main-section pf-m-fill pf-x-u-transparent pf-c-page__main-section--max-width pf-u-px-0">
       <div class="pf-l-grid pf-m-gutter">
         <div class="pf-l-grid__item pf-m-8-col">
           <div class="pf-c-card">
