--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -78,7 +78,7 @@ document.querySelector("#{{ .ID }} .lastcommit__commit__message").innerText =
 
 // Repo
 document.querySelector("#{{ .ID }} .lastcommit__repo__url").href =
-  lastCommit.lastCommitRepoURL;
+  lastCommit.lastCommitURL;
 
 document.querySelector("#{{ .ID }} .lastcommit__repo__name").innerText =
   lastCommit.lastCommitRepoName;
