--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -1,7 +1,9 @@
 <div class="pf-c-card" id="{{ .ID }}">
   <div
-    class="pf-c-card__title pf-l-flex pf-m-justify-content-flex-end pf-m-align-items-center pf-u-py-xl"
+    class="pf-c-card__title pf-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-u-py-xl"
   >
+    <span>Latest tweets</span>
+
     <a
       target="_blank"
       class="twitterfeed__user__url pf-l-flex pf-m-align-items-center"
