--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-  <main class="pf-c-page__main" tabindex="-1" id="main">
-    <section class="pf-c-page__main-section pf-m-fill">
+  <main class="pf-c-page__main pf-c-page__main--with-overlay pf-x-u-blur" tabindex="-1" id="main">
+    <section class="pf-c-page__main-section pf-m-fill pf-x-u-transparent pf-c-page__main-section--max-width pf-u-px-0">
       <div class="pf-c-page__main pf-c-content">
         <div class="pf-c-card">
           <div class="pf-c-card__body">
